--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,7 @@ Uploaders: Daniel Shahaf <danielsh@apache.org>
 Build-Depends: debhelper (>= 9)
 Standards-Version: 3.9.4
 #TODO add vcs related fields
+Homepage: https://github.com/zsh-users/zsh-syntax-highlighting/
 
 Package: zsh-syntax-highlighting
 Architecture: all
