--- a/debian/rules
+++ b/debian/rules
@@ -6,7 +6,7 @@ PREFIX=/usr
 # of the debian branch, not of the upstream branch (see source/options).
 # Is that a problem?
 override_dh_auto_install:
-	make -s install DESTDIR=$(CURDIR)/debian/$(NAME) PREFIX=$(PREFIX)
+	dh_auto_install -- PREFIX=$(PREFIX)
 
 %:
 	dh $@
