--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Homepage: https://github.com/zsh-users/zsh-syntax-highlighting/
 
 Package: zsh-syntax-highlighting
 Architecture: all
-Depends: zsh | zsh-static, ${misc:Depends}
+Depends: zsh, ${misc:Depends}
 Description: Fish shell like syntax highlighting for zsh
  This package provides syntax highlighing for the shell zsh.  It enables
  highlighing of commands whilst they are typed at a zsh prompt into an
