rules: Braindump current state of reproducibility issue.

--- a/debian/rules
+++ b/debian/rules
@@ -5,10 +5,21 @@ PREFIX=/usr
 # Note: 'make install' will set .revision-hash to the revision number
 # of the debian branch, not of the upstream branch (see source/options).
 # This is deliberate.
-#
+
 # TODO: the build is not reproducible: .revision-hash is set to $(git rev-parse
-# HEAD) when building from the package's git, but to $(git rev-parse 0.3.0)
-# when building outside git.
+# HEAD) when building from the package's git, but to $(cat .revision-hash)
+# when building outside git — which is normally the contents of .revision-hash
+# in the upstream tarball.
+#
+# Building twice inside git will give the same results both times;
+# Building twice outside git will also give the same results both times;
+# but the first pair will be different from the second pair.
+#
+# The "outside" build runs only 'dpkg-source' inside the package's git, and
+# that (for the "3.0 (quilt)" source/format) in turn only runs the quilt
+# series.  Ideally, somehow running the quilt series will patch .revision-hash
+# with the hash of the package's git repository revision being built...
+
 override_dh_auto_install:
 	dh_auto_install -- PREFIX=$(PREFIX)
 	find debian/$(NAME) -name test-data -exec rm -rf -- {} +
