--- a/debian/control
+++ b/debian/control
@@ -14,8 +14,8 @@ Package: zsh-syntax-highlighting
 Architecture: all
 Depends: zsh, ${misc:Depends}
 Description: Fish shell like syntax highlighting for zsh
- This package provides syntax highlighing for the shell zsh.  It enables
- highlighing of commands whilst they are typed at a zsh prompt into an
+ This package provides syntax highlighting for the shell zsh.  It enables
+ highlighting of commands whilst they are typed at a zsh prompt into an
  interactive terminal.  This helps in reviewing commands before running
  them, particularly in catching syntax errors.
  .
