control: Move canonical repository to alioth.

--- a/debian/control
+++ b/debian/control
@@ -7,9 +7,8 @@ Build-Depends:
 	debhelper (>= 9),
 	zsh,
 Standards-Version: 3.9.6
-# TODO switch vcs to alioth like pkg-zsh
-Vcs-Browser: https://github.com/zsh-users/zsh-syntax-highlighting/
-Vcs-Git: git://github.com/danielshahaf/zsh-syntax-highlighting-debian
+Vcs-Browser: https://anonscm.debian.org/cgit/pkg-zsh/zsh-syntax-highlighting.git/
+Vcs-Git: git://anonscm.debian.org/git/pkg-zsh/zsh-syntax-highlighting.git
 Homepage: https://github.com/zsh-users/zsh-syntax-highlighting/
 
 Package: zsh-syntax-highlighting
