Update for upstream release 0.4.0
* README.Debian: Point to new consolidated file.
    [Upstream doesn't currently create that file, but that is planned to be
    merged before the release.]

* changelog: Update "Initial release." entry.

* patches/set-HOME-in-tests.patch: Remove as obsolete, as described wherein.

* patches/set-version.patch: Refresh.

* patches/fix-test-failures-due-to-ps.patch: New.  Fixes testsuite failures
    in build chroot.

* rules
  (override_dh_auto_install, override_dh_installchangelogs): Update for
     upstream changes: don't remove files that upstream no longer installs,
     and do remove files that it installs but are already installed by
     debhelper under other names.

--- a/debian/rules
+++ b/debian/rules
@@ -2,9 +2,15 @@
 NAME=zsh-syntax-highlighting
 PREFIX=/usr
 
+# Remove COPYING.md as duplicate of /usr/share/doc/.../copyright
 override_dh_auto_install:
 	dh_auto_install -- PREFIX=$(PREFIX)
-	find debian/$(NAME) -name test-data -exec rm -rf -- {} +
+	rm debian/$(NAME)/usr/share/doc/zsh-syntax-highlighting/COPYING.md
+
+# Remove 'changelog.md' which both upstream and debhelper install to different names
+override_dh_installchangelogs:
+	dh_installchangelogs
+	rm debian/$(NAME)/usr/share/doc/$(NAME)/changelog.md
 
 %:
 	dh $@
