--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,7 @@ Homepage: https://github.com/zsh-users/zsh-syntax-highlighting/
 Package: zsh-syntax-highlighting
 Architecture: all
 Depends: zsh, ${misc:Depends}
+Enhances: zsh
 Description: Fish shell like syntax highlighting for zsh
  This package provides syntax highlighting for the shell zsh.  It enables
  highlighting of commands whilst they are typed at a zsh prompt into an
